refactor: centralize file paths using config module

--- a/notebooks/3_Feature_engineering.ipynb
+++ b/notebooks/3_Feature_engineering.ipynb
@@ -18,7 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "8f0318b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "PROJECT_ROOT = Path.cwd().parent\n",
+    "if str(PROJECT_ROOT) not in sys.path:\n",
+    "    sys.path.append(str(PROJECT_ROOT))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "27762ec4",
    "metadata": {},
    "outputs": [],
@@ -26,7 +41,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "from src.config import data_paths"
    ]
   },
   {
@@ -39,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e1443efa",
    "metadata": {},
    "outputs": [],
@@ -83,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e4f312ea",
    "metadata": {},
    "outputs": [],
@@ -118,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e9e75c43",
    "metadata": {},
    "outputs": [],
@@ -153,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9ce02d1a",
    "metadata": {},
    "outputs": [],
@@ -190,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "28936f6a",
    "metadata": {},
    "outputs": [],
@@ -230,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c5116f46",
    "metadata": {},
    "outputs": [],
@@ -260,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "91472041",
    "metadata": {},
    "outputs": [],
@@ -291,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "2a0e801d",
    "metadata": {},
    "outputs": [],
@@ -325,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "979acc63",
    "metadata": {},
    "outputs": [],
@@ -350,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "41fd44b5",
    "metadata": {},
    "outputs": [],
@@ -378,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "aadf2ff3",
    "metadata": {},
    "outputs": [],
@@ -405,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2e27e64e",
    "metadata": {},
    "outputs": [],
@@ -438,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "02e1a4ca",
    "metadata": {},
    "outputs": [],
@@ -471,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "9cb6ea36",
    "metadata": {},
    "outputs": [],
@@ -499,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "c019aa95",
    "metadata": {},
    "outputs": [],
@@ -526,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "293748a3",
    "metadata": {},
    "outputs": [],
@@ -553,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "758855fe",
    "metadata": {},
    "outputs": [],
@@ -602,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "62465e9f",
    "metadata": {},
    "outputs": [],
@@ -694,8 +710,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('C:/Users/lekshmi/Desktop/ml projects/appliances energy prediction/KAG_energydata_complete.csv')\n",
-    "\n",
+    "df = pd.read_csv(data_paths.raw_data)\n",
     "print(f\"Raw data shape: {df.shape}\")\n",
     "print(f\"Columns: {df.columns.tolist()}\")\n",
     "\n",
@@ -736,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6394aef9",
    "metadata": {},
    "outputs": [
@@ -744,7 +759,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved processed features to: data/processed/engineered_features.csv\n"
+      "✓ Saved processed features to: C:\\Users\\lekshmi\\Desktop\\Energy_Forecasting\\Energy-Consumption-Forecasting\\data\\processed\\engineered_features.csv\n"
      ]
     }
    ],
@@ -752,13 +767,13 @@
     "import os\n",
     "\n",
     "# Create directories if they don't exist\n",
-    "os.makedirs('data/processed', exist_ok=True)\n",
+    "data_paths.processed_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "\n",
     "# Save complete engineered dataset\n",
-    "output_path = 'data/processed/engineered_features.csv'\n",
-    "final_data.to_csv(output_path, index=False)\n",
-    "print(f\"✓ Saved processed features to: {output_path}\")\n",
+    "final_data.to_csv(data_paths.engineered_features, index=False)\n",
+    "print(f\"✓ Saved processed features to: {data_paths.engineered_features}\")\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -774,16 +789,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved feature names to: data/features/feature_names.txt\n"
+      "✓ Saved feature names to: C:\\Users\\lekshmi\\Desktop\\Energy_Forecasting\\Energy-Consumption-Forecasting\\data\\processed\\feature_names.txt\n"
      ]
     }
    ],
    "source": [
-    "os.makedirs('data/features', exist_ok=True)\n",
-    "feature_names_path = 'data/features/feature_names.txt'\n",
-    "with open(feature_names_path, 'w') as f:\n",
-    "    f.write('\\n'.join(features))\n",
-    "print(f\"✓ Saved feature names to: {feature_names_path}\")"
+    "feature_names_path = data_paths.processed_dir / \"feature_names.txt\"\n",
+    "with open(feature_names_path, \"w\") as f:\n",
+    "    f.write(\"\\n\".join(features))\n",
+    "\n",
+    "print(f\"✓ Saved feature names to: {feature_names_path}\")\n"
    ]
   }
  ],
