--- a/notebooks/2_Spike_analysis_eda.ipynb
+++ b/notebooks/2_Spike_analysis_eda.ipynb
@@ -18,7 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "id": "07664a40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "PROJECT_ROOT = Path.cwd().parent\n",
+    "if str(PROJECT_ROOT) not in sys.path:\n",
+    "    sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "85947059",
    "metadata": {},
    "outputs": [],
@@ -30,6 +45,7 @@
     "import seaborn as sns\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
+    "from src.config import data_paths\n",
     "\n",
     "# Display settings\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -48,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "d94573d8",
    "metadata": {},
    "outputs": [
@@ -62,8 +78,8 @@
    ],
    "source": [
     "\n",
-    "df = pd.read_csv(\"C:/Users/lekshmi/Desktop/ml projects/appliances energy prediction/KAG_energydata_complete.csv\")\n",
-    "\n",
+    "#df = pd.read_csv(\"C:/Users/lekshmi/Desktop/Energy_Forecasting/Energy-Consumption-Forecasting/data/raw/KAG_energydata_complete.csv\")\n",
+    "df = pd.read_csv(data_paths.raw_data)\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
     "df.set_index('date', inplace=True)\n",
     "df.sort_index(inplace=True)\n",
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ab5904f3",
    "metadata": {},
    "outputs": [
@@ -172,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "6533e4d2",
    "metadata": {},
    "outputs": [
@@ -270,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e95c9a80",
    "metadata": {},
    "outputs": [
@@ -360,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "2e6b0c69",
    "metadata": {},
    "outputs": [
@@ -451,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "b7a22bf3",
    "metadata": {},
    "outputs": [
@@ -519,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "e8285e9a",
    "metadata": {},
    "outputs": [
@@ -666,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "b5d01099",
    "metadata": {},
    "outputs": [
@@ -730,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "781540c8",
    "metadata": {},
    "outputs": [
@@ -796,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "9a54e257",
    "metadata": {},
    "outputs": [
@@ -875,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "97eb5d3e",
    "metadata": {},
    "outputs": [
@@ -964,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "0e85dab7",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "7a7fe339",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "a34fe15d",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "3661dded",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "791e9929",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "58d08d2f",
    "metadata": {},
    "outputs": [
@@ -1519,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "304d2f9f",
    "metadata": {},
    "outputs": [
@@ -1608,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "6e8133a6",
    "metadata": {},
    "outputs": [
@@ -1682,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "3089c77a",
    "metadata": {},
    "outputs": [
@@ -1840,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "391984f3",
    "metadata": {},
    "outputs": [
@@ -1924,14 +1940,6 @@
     "print(\"\\n📊 Difference Magnitude Distribution: Day × Hour Range (sample):\")\n",
     "print(count_df_granular.head(20))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "305f25ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
